recode with baltic-1257
because ironpython does not support utf-8

--- a/payment_methods_lt.yaml
+++ b/payment_methods_lt.yaml
@@ -2,8 +2,8 @@
   name: GRYNIEJI
   Xcounter: 0
 - code: 2
-  name: KORTELÄ–
+  name: KORTELË
   Xcounter: 1
 - code: 3
-  name: DOVANÅ² KORTELÄ–
+  name: DOVANØ KORTELË
   Xcounter: 2
