--- a/payment_methods_lt.yaml
+++ b/payment_methods_lt.yaml
@@ -2,8 +2,8 @@
   name: GRYNIEJI
   Xcounter: 0
 - code: "2"
-  name: KORTELË
+  name: KORTELÃ‹
   Xcounter: 1
 - code: "3"
-  name: DOVANØ KORTELË
+  name: DOVANÅ² ÄŒEKIS
   Xcounter: 2
