--- a/payment_methods_lt.yaml
+++ b/payment_methods_lt.yaml
@@ -2,8 +2,8 @@
   name: GRYNIEJI
   Xcounter: 0
 - code: "2"
-  name: KORTELÃ‹
+  name: KORTEL?
   Xcounter: 1
 - code: "3"
-  name: DOVANÅ² ÄŒEKIS
+  name: DOVANØ ÈEKIS
   Xcounter: 2
