--- a/vat_table_lt_bt.yaml
+++ b/vat_table_lt_bt.yaml
@@ -34,7 +34,7 @@ service fee:
   Siuntimo mokestis: 3
   Test mokestis BT: 3
   Compensa mokestis 2: 3
-  LOFTO mokestis: 3
+  Lofto mokestis: 3
   Paslaugos mokestis Saulë: 3
   Ðvyturio arenos mokestis: 3
   Ðvyturio arenos mokestis 0.30: 3
