--- a/vat_table_lt_3rd.yaml
+++ b/vat_table_lt_3rd.yaml
@@ -13,6 +13,7 @@ service fee:
   Paslaugos mokestis 0.20: 3
   Paslaugos mokestis 0.29: 3
   Paslaugos mokestis 0.30: 3
+  Paslaugos mokestis 0.35: 3
   Paslaugos mokestis 0.40: 3
   Paslaugos mokestis 0.49: 3
   Paslaugos mokestis 0.50: 3
@@ -21,6 +22,7 @@ service fee:
   Paslaugos mokestis 0.61: 3
   Paslaugos mokestis 0.70: 3
   Paslaugos mokestis 0.72: 3
+  Paslaugos mokestis 0.75: 3
   Paslaugos mokestis 0.80: 3
   Paslaugos mokestis 0.85: 3
   Paslaugos mokestis 0.87: 3
@@ -31,6 +33,10 @@ service fee:
   Paslaugos mokestis 1.45: 3
   Paslaugos mokestis 1.50: 3
   Paslaugos mokestis 2.00: 3
+  Paslaugos mokestis 2.90: 3
+  Paslaugos mokestis 3.00: 3
+  Paslaugos mokestis 6.00: 3
+  Pramogø arenos mokestis 1.00: 3
   Siuntimo mokestis: 3
   Test mokestis BT: 3
   Compensa mokestis 2: 3
@@ -38,9 +44,12 @@ service fee:
   Paslaugos mokestis Saulë: 3
   Ðvyturio arenos mokestis: 3
   Ðvyturio arenos mokestis 0.30: 3
+  Ðvyturio arenos mokestis 0.35: 3
+  Ðvyturio arenos mokestis 0.50: 3
   Ðvyturio arenos mokestis 0.58: 3
   Ðvyturio arenos mokestis 0.60: 3
   Ðvyturio arenos mokestis 0.72: 3
+  Ðvyturio arenos mokestis 0.75: 3
   Ðvyturio arenos mokestis 0.85: 3
   Ðvyturio arenos mokestis 6.00: 3
   Þalgirio arenos klubo mokestis: 3
